# indi-villa-final-private

./: indivilla.sql  pyproject.toml  pytest.ini
agencies/static/css/: admin.css  listings_new.css  signup.css
agencies/static/js/: filter-listings.js
contacts/: views.py
indivilla/: .env  settings.py
indivilla/static/css/: alert.css  alert.css.map  alert.scss  chart.css  commission.css  dashboard.css  index.css  listing.css  listings_new.css  login_custom.css  nav.css  profile.css  signup.css
indivilla/static/js/: alert.js
listings/: urls.py  views.py
listings/tests/: test_urls.py
static/css/: admin.css  alert.css  alert.scss  index.css  listing.css  listings_new.css  login_custom.css  resize.css  signup.css
templates/: accounts_base.html  base.html  chart_base.html
templates/listings/: chart.html  commission.html  listing.html
templates/partials/: _footer.html  _navbar.html
