[tool.poetry]
name = "indi-villa-project"
version = "0.1.0"
description = ""
authors = ["Sai SriHarsha Griddaluru <sriharsha.9554@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
flake8 = "^3.9.1"
pylint = "^2.8.2"
autopep8 = "^1.5.7"
mysqlclient = "^2.0.3"
django-environ = "^0.4.5"
Pillow = "^8.2.0"
pandas = "^1.2.4"
numpy = "^1.20.3"
Jinja2 = "^3.0.1"
pytest = "^6.2.4"
pytest-django = "^4.3.0"
pytest-cov = "^2.12.0"
mixer = "^7.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.4b2", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
